add correct linkedin url

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -689,7 +689,7 @@
             </a>
           </li>
           <li>
-            <a href="https:www.linkedin.com/in/kushal-dalasaniya-5344611b4" class="social-link">
+            <a href="https://www.linkedin.com/in/kushal-dalasaniya-5344611b4" class="social-link">
               <i class="uil uil-linkedin"></i>
             </a>
           </li>
