edit footer style for less than 560px

--- a/public/Style/style.css
+++ b/public/Style/style.css
@@ -1029,6 +1029,12 @@ footer .social-media{
   
   .circle{width: 0;}
 
+  footer .container{
+    display: grid;
+    justify-content: center;
+  }
+  
+
 }
 
 
