--- a/views/index.ejs
+++ b/views/index.ejs
@@ -676,7 +676,7 @@
     <footer>
       <div class="container">
         <a href="" class="logo">Kushal <span>Dalasaniya</span></a>
-        <p class="text">Copyright 2022. All rights reserved</p>
+        <p class="text">Copyright <%=(new Date()).getFullYear()%>. All rights reserved</p>
         <ul class="social-media">
           <li>
             <a href="" class="social-link">
