add new porfolio image link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -603,7 +603,8 @@
 
             <div class="mix prt-card product">
               <div class="prt-image">
-                <img src="../public/assets/smart-agriculture.jpg" alt="">
+                <!-- <img src="../public/assets/smart-agriculture.jpg" alt=""> -->
+                <img src="https://radiocrafts.com/wp-content/uploads/2020/05/soil-sensors.png" alt="">
               </div>
               <div class="prt-desc">
                 <h3>Smart irrigation system</h3>
