add letest things

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -415,7 +415,8 @@
               <p class="text">I can help with both front-end and back-end development.<br>
                 I can help with frontend technologies like HTML, CSS, Javascript, Bootstrap, jQuery, ReactJS, and many more.<br>
                 Backend development technologies such as node, express, spring boot, and others<br>
-                Having knowledge of databases like MongoDB and SQL.</p>
+                Having knowledge of databases like MongoDB and SQL.<br>
+                Can make a decentralised application on internet computer using motoko dfinity</p>
               <!-- <a href="#" class="btn">Hire me</a> -->
             </div>
 
@@ -553,7 +554,7 @@
             <div class="filter-btns">
               <button class="filter-btn"  data-filter="all">All</button>
               <button class="filter-btn"  data-filter=".product">product</button>
-              <button class="filter-btn"  data-filter=".inter">Interacting</button>
+              <button class="filter-btn"  data-filter=".inter">DApps</button>
               <button class="filter-btn"  data-filter=".web">Web App</button>
             </div>
           </div>
@@ -561,12 +562,12 @@
           <div class="portfolio-gallery">
             <div class="mix prt-card inter">
               <div class="prt-image">
-                <!-- <img src="../public/assets/card.png" alt=""> -->
-                <img src="https://www.kindpng.com/picc/m/483-4831447_ekml-business-card-mockup-graphic-design-hd-png.png" alt="Ekml Business Card Mockup - Graphic Design, HD Png ">
+                <img src="../public/assets/OpenD.png" alt="">
+                <!-- <img src="https://www.kindpng.com/picc/m/483-4831447_ekml-business-card-mockup-graphic-design-hd-png.png" alt="Ekml Business Card Mockup - Graphic Design, HD Png "> -->
                 <!-- <img src="https://www.kindpng.com/picc/m/674-6742123_wood-card-icon-wood-visiting-card-design-hd.png" alt="Wood Card Icon - Wood Visiting Card Design, HD Png Download@kindpng.com"> -->
               </div>
               <div class="prt-desc">
-                <h3>Business Cards</h3>
+                <h3>OpenD - NFT buy and sell pletform</h3>
                 <a href="#" class="btn-second">Read More</a>
               </div>
             </div>
@@ -593,10 +594,11 @@
 
             <div class="mix prt-card inter">
               <div class="prt-image">
-                <img src="../public/assets/port4.png" alt="">
+                <!-- <img src="../public/assets/port4.png" alt=""> -->
+                <img src="../public/assets/Ksurv.png" alt="">
               </div>
               <div class="prt-desc">
-                <h3>Logo design</h3>
+                <h3>Crypto token</h3>
                 <a href="#" class="btn-second">Read More</a>
               </div>
             </div>
@@ -680,18 +682,23 @@
         <p class="text">Copyright <%=(new Date()).getFullYear()%>. All rights reserved</p>
         <ul class="social-media">
           <li>
-            <a href="" class="social-link">
+            <a href="" class="social-link" target="_blank">
               <i class="uil uil-facebook"></i>
             </a>
           </li>
           <li>
-            <a href="" class="social-link">
+            <a href="" class="social-link" target="_blank">
               <i class="uil uil-twitter"></i>
             </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/kushal-dalasaniya-5344611b4" class="social-link">
+            <a href="https://www.linkedin.com/in/kushal-dalasaniya-5344611b4" class="social-link" target="_blank">
               <i class="uil uil-linkedin"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/Kushal-Dalasaniya" class="social-link" target="_blank">
+              <i class="uil uil-github"></i>
             </a>
           </li>
         </ul>
