--- a/views/index.ejs
+++ b/views/index.ejs
@@ -390,7 +390,7 @@
               <div class="about-info">
                 <div class="showcase-info">
                   <h3 class="sub-heading">About Me</h3>
-                  <h1 class="heading">Better design,<br>batter experience</h1>
+                  <h1 class="heading">Better design,<br>better experience</h1>
                   <p class="text">I am a creative designer and developer, who aims to work with small businesses and marginalized communities to bring their passions to life. I offer both design and development services of web applications or websites!</p>
                 </div>
                 <div class="cta">
