--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,7 @@
           <div class="row">
             <div class="col-md">
               <div class="showcase-info">
-                <h3 class="sub-heading">Full Stack Developer</h3>
+                <h3 id="mainHeading"class="sub-heading">Full-Stack Developer</h3>
                 <h1 class="heading">Kushal Dalasaniya</h1>
                 <p class="text">I am a freelance web developer. Implementing applications and solutions using a range of technologies and programmmg
                 languages.</p>
