update my content

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,8 +49,7 @@
               <div class="showcase-info">
                 <h3 id="mainHeading"class="sub-heading">Full-Stack Developer</h3>
                 <h1 class="heading">Kushal Dalasaniya</h1>
-                <p class="text">I am a freelance web developer. Implementing applications and solutions using a range of technologies and programmmg
-                languages.</p>
+                <p class="text">I am a skilled freelance web developer with expertise in a variety of technologies and programming languages, dedicated to implementing innovative solutions for your web applications.</p>
               </div>
               <div class="cta">
                 <a href="mailto:kushaldalasaniya2930@gmail.com" class="btn">Contact me</a>
@@ -412,11 +411,12 @@
             </div>
 
             <div class="box-desc">
-              <p class="text">I can help with both front-end and back-end development.<br>
-                I can help with frontend technologies like HTML, CSS, Javascript, Bootstrap, jQuery, ReactJS, and many more.<br>
-                Backend development technologies such as node, express, spring boot, and others<br>
-                Having knowledge of databases like MongoDB and SQL.<br>
-                Can make a decentralised application on internet computer using motoko dfinity</p>
+              <p class="text">With my comprehensive expertise, I offer an exceptional range of skills in both front-end and back-end development. Whether it's crafting captivating user interfaces or building robust server architectures, I have you covered. </p>
+              <p class="text">In the realm of front-end technologies, I excel in HTML, CSS, Javascript, Bootstrap, jQuery, and ReactJS, to name just a few. These tools allow me to create visually stunning and interactive experiences that engage users and elevate your online presence.</p>
+              <p class="text">When it comes to back-end development, I possess a deep understanding of node.js, express, spring boot, and various other frameworks. This enables me to architect scalable and efficient server-side solutions that ensure optimal performance and reliability.</p>
+              <p class="text">Moreover, I have extensive knowledge of databases such as MongoDB and SQL, empowering me to efficiently manage and manipulate data, ensuring seamless storage and retrieval for your applications.</p>
+              <p class="text">What sets me apart is my ability to design and develop decentralized applications on the Internet Computer platform, utilizing Motoko and DFINITY. This cutting-edge technology unlocks a new era of innovation and security, providing unique opportunities to create groundbreaking decentralized applications.</p>
+              
               <!-- <a href="#" class="btn">Hire me</a> -->
             </div>
 
@@ -481,8 +481,7 @@
                 <h3 class="sub-heading">My Services</h3>
                 <h1 class="heading">Things I may do for my clients</h1>
                 <p class="text">
-                  I will make you a beautiful and fully responsive site for your business.<br>
-                  It will help you to get your business online.
+                  By combining my expertise in a broad range of front-end and back-end technologies, along with my proficiency in decentralized application development, I offer a comprehensive solution for your digital needs. From stunning interfaces to robust server architectures and decentralized applications, I am dedicated to bringing your vision to life with utmost creativity and skill.
                 </p>
                 <!-- <div class="milestones"></div> -->
                 <div class="cta">
