--- a/views/index.ejs
+++ b/views/index.ejs
@@ -430,7 +430,7 @@
                     <span data-target="75">0</span>%
                   </h2>
                 </div>
-                <div class="sk-title">HTML / CSS</div>
+                <div class="sk-title">ReactJS</div>
               </div>
 
               <div class="skill">
@@ -442,7 +442,10 @@
                     <span data-target="90">0</span>%
                   </h2>
                 </div>
-                <div class="sk-title">Java</div>
+                <div class="sk-title">
+                  <p>Java</p>
+                  <p>(Spring, SpringBoot)</p>
+                </div>
               </div>
 
               <div class="skill">
@@ -454,7 +457,9 @@
                     <span data-target="89">0</span>%
                   </h2>
                 </div>
-                <div class="sk-title">C++</div>
+                <div class="sk-title">
+                  <p>DBMS</p>
+                  <p>(RDBMS, MongoDB, Elastic)</p></div>
               </div>
 
               <div class="skill">
@@ -466,7 +471,7 @@
                     <span data-target="80">0</span>%
                   </h2>
                 </div>
-                <div class="sk-title">Javascript</div>
+                <div class="sk-title">Low Level Design</div>
               </div>
             </div>
           </div>
@@ -591,7 +596,9 @@
                     <p class="text"><span class="achievement">Security Measures :</span> Implemented session management and variable device limits within the product to enhance user security.</p>
                     <p class="text"><span class="achievement">Observability :</span> Possess experience with Elastic Search and Kibana for log management and data visualization.</p>
                     <p class="text"><span class="achievement">Streamlined Bank Integrations :</span> Built a custom framework for seamless client onboarding to SAS-based fintech products, significantly reducing onboarding time by 30% .</p>
-                    <div class="skill-logo-container">
+
+                    <p><span class="achievement" style="font-size:1.3rem;">Technologies : </span></p>
+                    <div class="skill-logo-container">  
                       <img class="skill-logo" src="../public/assets/logos--java.png"></img>
                       <img class="skill-logo" src="../public/assets/devicon--spring.png"></img>
                       <img class="skill-logo" src="../public/assets/postgresql.png"></img>
@@ -619,6 +626,7 @@
                   <p class="text">Ensured code quality through comprehensive unit <span class="achievement">testing with Mockito and JUnit</span>, achieving high test coverage.</p>
                   <p class="text">Spearheaded the evaluation and migration of <span class="achievement">authentication mechanisms (e.g., JWT)</span> to strengthen security posture.</p>
                   <p class="text">Championed <span class="achievement">DevOps</span> practices, automating build, test, and deployment processes with <span class="achievement">Bamboo and GitLab</span> for streamlined workflows.</p>
+                  <p><span class="achievement" style="font-size:1.3rem;">Technologies : </span></p>
                   <div class="skill-logo-container">
                     <img class="skill-logo" src="../public/assets/logos--java.png"></img>
                     <img class="skill-logo" src="../public/assets/devicon--spring.png"></img>
@@ -645,6 +653,7 @@
                   <p class="text">Adept with various blockchain development tools like <span class="achievement">Remix, Geth, DFX, and Hardhat,</span> streamlining development workflows.</p>
                   <p class="text">Delivered innovative solutions like the <span class="achievement">ICP Cycle Management Project</span>, enabling secure client <span class="achievement">canister cycle management</span> and <span class="achievement">automated top-up functionalities</span> based on configurable minimum cycles.</p>
                   <p class="text">Bridged the gap between blockchain and user experience by integrating blockchain technology with ReactJS on the front-end for seamless user interaction.</p>
+                  <p><span class="achievement" style="font-size:1.3rem;">Technologies : </span></p>
                   <div class="skill-logo-container">
                     <img class="skill-logo" src="../public/assets/blockchain.png"></img>
                     <img class="skill-logo" src="../public/assets/ethereum.png"></img>
