--- a/public/Style/style.css
+++ b/public/Style/style.css
@@ -347,9 +347,13 @@ header.scrolled{
   grid-template-columns: 1.05fr 1fr;
 } */
 
-.about .text{
-  margin: 3rem 0 4rem;
+.about{
+  margin: 100px 0 150px 0;
 }
+
+/* .about .text{
+  margin: 3rem 0 4rem;
+} */
 
 .about-grid{
   display: grid;
@@ -448,9 +452,7 @@ header.scrolled{
 .skills-section{
   margin: 200px 0 150px 0;
 }
-.skill{
-  overflow: hidden;
-}
+
 
 .skills-box{
   background-color: var(--bg-color-2);
@@ -462,16 +464,15 @@ header.scrolled{
 
 .skills-warp{
   display: grid;
-  grid-template-columns: repeat(4,150px);
-  margin-top: 3rem;
-  justify-content: space-between;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
 }
 
 .skill{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .sk-progress{
@@ -521,10 +522,27 @@ header.scrolled{
 }
 
 .sk-title{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   color:var(--heading-color);
   margin-top: 0.75rem;
   font-weight: 400;
   font-size:1rem;
+}
+
+.sk-title > p{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  word-break: break-word;
+}
+
+.sk-title p {
+  margin: 0;
 }
 
 /*--------------------- Services section------------------ */
@@ -1049,7 +1067,7 @@ header.scrolled{
 
 
 .skill-logo{
-  width: 45px;
+  width: 60px;
   transition: 0.3s;
 }
 
@@ -1376,7 +1394,12 @@ footer .social-media{
 
 /* ---------------------------770px screen------------------------------------ */
 
-
+@media screen and (max-width: 1080px) {
+  .skills-warp{
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+  }
+}
 
 @media(max-width:770px){
 
@@ -1409,8 +1432,8 @@ footer .social-media{
   }
 
   .skills-warp{
-    grid-template-columns: repeat(2,150px);
-    row-gap: 4rem;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
   }
 
   .Services .card .btn-second{
@@ -1465,10 +1488,7 @@ footer .social-media{
     object-fit: cover;
   }
 
-  .skills-warp{
-    margin: 0 4rem 0 0;
-    row-gap: 2rem;
-  }
+  
 
   .square1{
     width: 0;
@@ -1537,6 +1557,10 @@ footer .social-media{
 
   .experience-section .events-content .text{
     font-size:0.9rem;
+  }
+
+  .skill-logo{
+    width: 45px;
   }
 }
 
